@@ -2,20 +2,29 @@
   trigger_mode: "ON_EVERY_PUSH"
   ref_name: "master"
   actions:
+  - action: "Open SUSE"
+    type: "BUILD"
+    docker_image_name: "library/opensuse"
+    docker_image_tag: "latest"
+    execute_commands:
+    - tar czf ../beryllium.tar.gz * --exclude=.git --exclude=*.sh && rpmbuild -D"dicom 1" -D"distro opensuse" -D"rev $(lsb_release -rs)" -ta ../beryllium.tar.gz
+    setup_commands:
+    - zypper install -y make rpm-build lsb-release libqt5-linguist libqt5-qtbase-devel gstreamer-plugins-qt5-devel dcmtk-devel libmediainfo-devel libqt5-qtx11extras-devel openssl-devel libgudev-1_0-devel libavc1394-devel libv4l-devel
+    trigger_condition: "ALWAYS"
   - action: "CentOS"
     type: "BUILD"
     docker_image_name: "library/centos"
     docker_image_tag: "latest"
     execute_commands:
+    - tar czf ../beryllium.tar.gz * --exclude=.git --exclude=*.sh && rpmbuild -D"dicom 1" -D"distro centos" -D"rev $(lsb_release -rs)" -ta ../beryllium.tar.gz
+    setup_commands:
+    - yum install -y git make cmake boost-devel gstreamer1-plugins-base-devel qt5-qtdeclarative-devel redhat-lsb rpm-build gstreamer1-devel libv4l-devel qt5-qtbase-devel qt5-linguist qt5-qtx11extras-devel libgudev1-devel libavc1394-devel libmediainfo-devel dcmtk-devel openssl-devel gcc-c++
     - git clone https://github.com/detrout/qt-gstreamer.git
     - mkdir qt-gstreamer/build && cd qt-gstreamer/build
     - cmake -Wno-dev .. -DCMAKE_INSTALL_PREFIX=/usr -DQT_VERSION=5
     - cmake --build . --target install
     - cd ../..
     - rm -rf qt-gstreamer
-    - tar czf ../beryllium.tar.gz * --exclude=.git --exclude=*.sh && rpmbuild -D"dicom 1" -D"distro centos" -D"rev $(lsb_release -rs)" -ta ../beryllium.tar.gz
-    setup_commands:
-    - yum install -y git make cmake boost-devel gstreamer1-plugins-base-devel qt5-qtdeclarative-devel redhat-lsb rpm-build gstreamer1-devel libv4l-devel qt5-qtbase-devel qt5-linguist qt5-qtx11extras-devel libgudev1-devel libavc1394-devel libmediainfo-devel dcmtk-devel openssl-devel tcp_wrappers-devel gcc-c++
     trigger_condition: "ALWAYS"
   - action: "Fedora"
     type: "BUILD"
@@ -24,7 +33,7 @@
     execute_commands:
     - tar czf ../beryllium.tar.gz * --exclude=.git --exclude=*.sh && rpmbuild -D"dicom 1" -D"distro fedora" -D"rev $(lsb_release -rs)" -ta ../beryllium.tar.gz
     setup_commands:
-    - dnf install -y make redhat-lsb rpm-build gstreamer1-devel libv4l-devel qt5-qtbase-devel qt5-gstreamer-devel qt5-linguist qt5-qtx11extras-devel libgudev1-devel libavc1394-devel libmediainfo-devel dcmtk-devel openssl-devel tcp_wrappers-devel gcc-c++
+    - dnf install -y make redhat-lsb rpm-build gstreamer1-devel libv4l-devel qt5-qtbase-devel qt5-gstreamer-devel qt5-linguist qt5-qtx11extras-devel libgudev1-devel libavc1394-devel libmediainfo-devel dcmtk-devel openssl-devel gcc-c++
     trigger_condition: "ALWAYS"
   - action: "Ubuntu"
     type: "BUILD"
