@@ -8,7 +8,7 @@
 
     # DCMTK isn't pgk-config compatible at all.
     LIBS       += -ldcmnet -ldcmdata -loflog -lofstd
-    unix:LIBS  += -lwrap -lssl -lz
+    unix:LIBS  += -lssl -lz
     win32:LIBS += -lws2_32 -lzlibstatic -lnetapi32 -liphlpapi -lcharset
 
     SOURCES   += \
