@@ -1,3 +1,11 @@
+beryllium (1.4.0) debian;
+
+  * Screen capture source.
+  * Generic property editor for sources & codecs.
+  * Windows global hotkeys.
+
+ -- Pavel Bludov <pbludov@gmail.com>  Mon, 05 Feb 2018 15:38:00 +0800
+
 beryllium (1.3.10) debian;
 
   * Proper rendering of images on Windows.
